[tool.poetry]
name = "hugging-transformers-poc"
version = "0.1.0"
description = ""
authors = ["saswata <saswat.dutta@gmail.com>"]
readme = "README.md"
packages = [{include = "hugging_transformers_poc"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["torch"], version = "^4.30.1"}


[tool.poetry.group.dev.dependencies]
huggingface-hub = {extras = ["cli"], version = "^0.15.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
